[package]
name = "dubbel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio= { version= "1", features = ["macros", "rt-multi-thread"] }
reqwest= "0.12"

[lib]
path = "src/lib.rs"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3